--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "jest": "^23.5.0",
+    "rewire": "^4.0.1",
     "supertest": "^3.1.0"
   },
   "dependencies": {
