--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node server/server.js"
+    "start":"node server/server.js",
     "test": "jest --verbose=true",
     "test-watch": "nodemon --exec \"npm test\""
   },
